Sorgente/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Addizionali_mese_precedente__c</fullName>
        <label>Addizionali mese precedente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agente_ultima_visita__c</fullName>
        <label>Agente ultima visita</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anagrafica_completa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anagrafica completa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annulla_l_iscrizione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annulla l&apos;iscrizione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizzazione_invio_DEM__c</fullName>
        <label>Autorizzazione invio DEM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Autorizza</fullName>
                </value>
                <value>
                    <fullName>Non autorizza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_per_consiglio__c</fullName>
        <label>Bonus per consiglio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAMPO_TECNICO_STATUS__c</fullName>
        <label>CAMPO TECNICO STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASSOCIATO</fullName>
                </value>
                <value>
                    <fullName>AFFILIATO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_collaboratore__c</fullName>
        <label>Categoria collaboratore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operatore prelievo</fullName>
                </value>
                <value>
                    <fullName>Agente</fullName>
                </value>
                <value>
                    <fullName>Prevendita</fullName>
                </value>
                <value>
                    <fullName>Postvendita</fullName>
                </value>
                <value>
                    <fullName>Amministrazione</fullName>
                </value>
                <value>
                    <fullName>Collaboratore med. sci.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_fiscale__c</fullName>
        <label>Codice fiscale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferma_perdita_SG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conferma perdita SG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conferma_perdita_SS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conferma perdita SS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contratti_SS_fino_al_31_12_2017__c</fullName>
        <label>Contratti SS fino al 31/12/2017</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controllo_referto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controllo referto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costo_a_refertazione__c</fullName>
        <label>Costo a refertazione</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_per_prelievo__c</fullName>
        <label>Costo per prelievo</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_ultima_prescrizione__c</fullName>
        <label>Data ultima prescrizione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ultima_visita_2__c</fullName>
        <label>Data ultima visita 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ultima_visita_Reativita__c</fullName>
        <formula>Data_ultima_visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data ultima visita Reativita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ultima_visita__c</fullName>
        <label>Data ultima visita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delta_Max_Opp_vs_Opp_90_gg_SS__c</fullName>
        <formula>Opportunit_SS_90__c  -  Max_Opportunit_SS_90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calo prescrittivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desidera_sito__c</fullName>
        <label>Desidera sito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>Fatto</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effettua_prelievi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effettua prelievi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_secondaria__c</fullName>
        <label>Email secondaria</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fattura_il_professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo da flaggare nel caso in cui lo specialista ci emetta una fattura dal suo professional principale quando ci richiede il pagamento di una consulenza.</description>
        <label>Fattura il professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Referente__c</fullName>
        <externalId>true</externalId>
        <label>ID Referente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_univoco_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id univoco (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inattivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inattivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intestatario_IBAN__c</fullName>
        <label>Intestatario IBAN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lettera_amministratori__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lettera amministratori</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listino_prezzi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listino prezzi</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Referenti</relationshipLabel>
        <relationshipName>Referenti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Opportunit_SG_60__c</fullName>
        <label>Max Opportunità SG (60)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Opportunit_SS_90__c</fullName>
        <label>Max Opportunità SS (90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modalit_di_pagamento__c</fullName>
        <label>Modalità di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fattura</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monte_PC_SS__c</fullName>
        <label>Monte PC-SS</label>
        <summarizedField>Elenco_Pazienti__c.Punti_Consiglio__c</summarizedField>
        <summaryFilterItems>
            <field>Elenco_Pazienti__c.Data__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Elenco_Pazienti__c.Ginecologo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monte_punti_consiglio_SG__c</fullName>
        <label>Monte PC - SG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monte_punti_consiglio_SS__c</fullName>
        <label>Monte PC - SS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivazione_perdita_SG__c</fullName>
        <label>Motivazione perdita SG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prezzo prodotti</fullName>
                </value>
                <value>
                    <fullName>Qualità prodotti</fullName>
                </value>
                <value>
                    <fullName>Qualità servizio</fullName>
                </value>
                <value>
                    <fullName>Listino incompleto</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_perdita_SS__c</fullName>
        <label>Motivazione perdita SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-donazione</fullName>
                </value>
                <value>
                    <fullName>Esclusività con competitor</fullName>
                </value>
                <value>
                    <fullName>Qualità prodotto</fullName>
                </value>
                <value>
                    <fullName>Qualità servizio</fullName>
                </value>
                <value>
                    <fullName>Prezzo servizio al paziente</fullName>
                </value>
                <value>
                    <fullName>Punti consiglio bassi</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Numero_Citofono_fatturazione__c</fullName>
        <label>Nome/Numero Citofono fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Numero_Citofono_spedizione__c</fullName>
        <label>Nome/Numero Citofono spedizione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_contattare_pazienti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non contattare pazienti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifica_PC_SS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifica PC-SS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifica_desidera_sito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifica desidera sito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numero_clienti_persi_SS__c</fullName>
        <description>Numero totale di opportunità SS associate al ginecologo per status &quot;prospect perso&quot; o &quot;cliente perso&quot; purché sia compilato il campo data firma contratto o data ordine kit e perse negli ultimi 90 gg</description>
        <label>Opportunità perse 90 (SS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_pazienti_annui__c</fullName>
        <label>Numero pazienti annui</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_prelievi_ultimo_mese__c</fullName>
        <label>Numero prelievi ultimo mese</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_prodotti_prescritti_SS__c</fullName>
        <description>Numero totale di opportunità SS associate al ginecologo per qualsiasi status purché sia compilato il campo data firma contratto o data ordine kit.</description>
        <label>Numero prodotti prescritti (SS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Attivo__c</fullName>
        <label>Opp Attivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunit_SG_60__c</fullName>
        <label>Opportunità SG (60)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunit_SS_90__c</fullName>
        <label>Opportunità SS (90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amici/conoscenti</fullName>
                </value>
                <value>
                    <fullName>Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>Siti e app satellite</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Fiere e Convegni</fullName>
                </value>
                <value>
                    <fullName>Specialista</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Siti extra gruppo</fullName>
                </value>
                <value>
                    <fullName>Motore di ricerca</fullName>
                </value>
                <value>
                    <fullName>Pieghevole</fullName>
                </value>
                <value>
                    <fullName>Collaboratore</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Candidatura spontanea</fullName>
                </value>
                <value>
                    <fullName>Società di selezione</fullName>
                </value>
                <value>
                    <fullName>Istituto di formazione</fullName>
                </value>
                <value>
                    <fullName>Campagna interna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SS__c</fullName>
        <label>PC-SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potenzialit_prescrittiva_SG__c</fullName>
        <label>Potenzialità prescrittiva SG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da definire</fullName>
                    <default>true</default>
                    <label>Da definire</label>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Bassa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potenzialit_prescrittiva__c</fullName>
        <label>Potenzialità prescrittiva SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bassa</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescrittore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrittore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presente_su_Gestionale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica se il referente è sincronizzato con un ginecologo nel database Gestionale.</description>
        <label>Presente su Gestionale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profilo_Titolare__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profilo Titolare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_riscattati_SG__c</fullName>
        <formula>Punti_consiglio_totali_SG__c -  Monte_punti_consiglio_SG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punti consiglio riscattati SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_riscattati_SS__c</fullName>
        <formula>Punti_consiglio_totali_SS__c -  Monte_punti_consiglio_SS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punti consiglio riscattati SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_totali_SG__c</fullName>
        <label>Punti consiglio totali SG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punti_consiglio_totali_SS__c</fullName>
        <label>Punti consiglio totali SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reativita__c</fullName>
        <formula>Data_ultima_visita_Reativita__c    -  Data_ultima_prescrizione__c</formula>
        <label>Reatività</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referente_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta valutazione perdita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refertazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refertazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Abruzzo</fullName>
                </value>
                <value>
                    <fullName>Basilicata</fullName>
                </value>
                <value>
                    <fullName>Calabria</fullName>
                </value>
                <value>
                    <fullName>Campania</fullName>
                </value>
                <value>
                    <fullName>Emilia-Romagna</fullName>
                </value>
                <value>
                    <fullName>Friuli-Venezia Giulia</fullName>
                </value>
                <value>
                    <fullName>Lazio</fullName>
                </value>
                <value>
                    <fullName>Liguria</fullName>
                </value>
                <value>
                    <fullName>Lombardia</fullName>
                </value>
                <value>
                    <fullName>Marche</fullName>
                </value>
                <value>
                    <fullName>Molise</fullName>
                </value>
                <value>
                    <fullName>Piemonte</fullName>
                </value>
                <value>
                    <fullName>Puglia</fullName>
                </value>
                <value>
                    <fullName>Sardegna</fullName>
                </value>
                <value>
                    <fullName>Sicilia</fullName>
                </value>
                <value>
                    <fullName>Toscana</fullName>
                </value>
                <value>
                    <fullName>Trentino-Alto Adige</fullName>
                </value>
                <value>
                    <fullName>Umbria</fullName>
                </value>
                <value>
                    <fullName>Valle d&apos;Aosta</fullName>
                </value>
                <value>
                    <fullName>Veneto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Richiesta_spedita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guida cartacea spedita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheda_privacy_firmata__c</fullName>
        <label>Scheda privacy firmata</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Da sottoporre</fullName>
                    <default>true</default>
                    <label>Da sottoporre</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servizi_proposti__c</fullName>
        <label>Servizi offerti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulenza pre test</fullName>
                </value>
                <value>
                    <fullName>Firma consenso</fullName>
                </value>
                <value>
                    <fullName>Refertazione</fullName>
                </value>
                <value>
                    <fullName>Consulenza post test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sito_web__c</fullName>
        <label>Sito web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Societa_referente__c</fullName>
        <label>Società</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>SS+SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Somma_opp_90_max_opp_90__c</fullName>
        <formula>Opportunit_SS_90__c  +  Max_Opportunit_SS_90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Somma opp 90 max opp 90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sottocategoria_origine__c</fullName>
        <label>Sottocategoria origine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origine__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CSCO</fullName>
                </value>
                <value>
                    <fullName>Ok Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Diagnosi prenatale</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Voice</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Bimbinfiera</fullName>
                </value>
                <value>
                    <fullName>Nazionale SIGO</fullName>
                </value>
                <value>
                    <fullName>Adecco</fullName>
                </value>
                <value>
                    <fullName>Altra società</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>InfoJob</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specializzazione_specialista__c</fullName>
        <label>Specializzazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Chirurgo estetico</fullName>
                </value>
                <value>
                    <fullName>Dermatologo</fullName>
                </value>
                <value>
                    <fullName>Diabetologo</fullName>
                </value>
                <value>
                    <fullName>Dietologo</fullName>
                </value>
                <value>
                    <fullName>Estetista</fullName>
                </value>
                <value>
                    <fullName>Farmacista</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologo</fullName>
                </value>
                <value>
                    <fullName>Genetista</fullName>
                </value>
                <value>
                    <fullName>Ginecologo</fullName>
                </value>
                <value>
                    <fullName>Infermiere</fullName>
                </value>
                <value>
                    <fullName>Medico alternativo</fullName>
                </value>
                <value>
                    <fullName>Medico sportivo</fullName>
                </value>
                <value>
                    <fullName>Neurologo</fullName>
                </value>
                <value>
                    <fullName>Nutrizionista</fullName>
                </value>
                <value>
                    <fullName>Oculista</fullName>
                </value>
                <value>
                    <fullName>Odontoiatra</fullName>
                </value>
                <value>
                    <fullName>Oncologo</fullName>
                </value>
                <value>
                    <fullName>Ostetrica</fullName>
                </value>
                <value>
                    <fullName>Ostetrica OpP</fullName>
                </value>
                <value>
                    <fullName>Pediatra</fullName>
                </value>
                <value>
                    <fullName>Personal trainer</fullName>
                </value>
                <value>
                    <fullName>Senologo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_SG__c</fullName>
        <label>Status SG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Da affiliare o associare</fullName>
                </value>
                <value>
                    <fullName>Da riaffiliare</fullName>
                </value>
                <value>
                    <fullName>Da riassociare</fullName>
                </value>
                <value>
                    <fullName>Associato</fullName>
                </value>
                <value>
                    <fullName>Affiliato</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
                <value>
                    <fullName>Associato perso</fullName>
                </value>
                <value>
                    <fullName>Affiliato perso</fullName>
                </value>
                <value>
                    <fullName>Perso</fullName>
                </value>
                <value>
                    <fullName>IA prodotto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_SS__c</fullName>
        <label>Status SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Da affiliare o associare</fullName>
                </value>
                <value>
                    <fullName>Da riaffiliare</fullName>
                </value>
                <value>
                    <fullName>Da riassociare</fullName>
                </value>
                <value>
                    <fullName>Associato</fullName>
                </value>
                <value>
                    <fullName>Affiliato</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
                <value>
                    <fullName>Associato perso</fullName>
                </value>
                <value>
                    <fullName>Affiliato perso</fullName>
                </value>
                <value>
                    <fullName>Perso</fullName>
                </value>
                <value>
                    <fullName>IA prodotto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Account__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Account</label>
        <type>Text</type>
    </fields>
</CustomObject>